Fix button in about section and add gap token for text boxes

--- a/src/sass/abstracts/_design-tokens.scss
+++ b/src/sass/abstracts/_design-tokens.scss
@@ -52,6 +52,7 @@ $heading-3-bottom-padding: $size-4;
 // layout
 $grid-gap: $size-9;
 $flex-group-gap: $size-11;
+$text-box-gap: $size-4;
 
 $section-padding-block: $size-12;
 $section-padding-block-mobile: $size-11;
@@ -102,6 +103,7 @@ $image-border-radius-upright: $border-radius-4;
 $about-image-background: $color-primary-200;
 $about-background: $color-primary-800;
 $about-text-color: $color-primary-100;
+$about-text-box-gap: $text-box-gap;
 
 // segment component & inverse (& white?)
 $segment-color: $color-neutral-600;
@@ -109,6 +111,8 @@ $segment-color-inverse: $color-primary-100;
 $segment-background-color: $color-primary-100;
 $segment-background-color-inverse: $color-primary-800;
 $segment-image-background-color: $color-primary-200;
+$segment-flex-gap: $size-12;
+$segment-text-box-gap: $text-box-gap;
 
 // site footer
 $footer-background-color: $color-background-default;
