--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -12,6 +12,7 @@
         justify-content: center;
 
         .box__text {
+            align-items: flex-start;
             display: flex;
             flex-direction: column;
             gap: $size-4;
